Ajout Happy Halloween

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Git kraken</title>
 </head>
 <body>
-    <p>Joyeux Halloween</p>
+    <p>Happy Halloween</p>
     <a href="./index.html"></a>
 </body>
 </html>
