Ajout Joyeux halloween en portugais

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Git kraken</title>
 </head>
 <body>
-    <p>Happy Halloween</p>
-    <a href="./index.html"></a>
+    <p>Feliz Dia das Bruxas</p>
 </body>
 </html>
